--- a/WPFUI/MainWindow.xaml
+++ b/WPFUI/MainWindow.xaml
@@ -98,10 +98,10 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Row="0" Grid.Column="1" Content="North"></Button>
-                <Button Grid.Row="1" Grid.Column="0" Content="West"></Button>
-                <Button Grid.Row="1" Grid.Column="2" Content="East"></Button>
-                <Button Grid.Row="2" Grid.Column="1" Content="South"></Button>
+                <Button Click="OnClick_MoveNorth" Height="25" Width="65" Margin="10" Grid.Row="0" Grid.Column="1" Content="North"></Button>
+                <Button Click="OnClick_MoveWest" Height="25" Width="65" Margin="10"  Grid.Row="1" Grid.Column="0" Content="West"></Button>
+                <Button Click="OnClick_MoveEast" Height="25" Width="65" Margin="10"  Grid.Row="1" Grid.Column="2" Content="East"></Button>
+                <Button Click="OnClick_MoveSouth" Height="25" Width="65" Margin="10"  Grid.Row="2" Grid.Column="1" Content="South"></Button>
             </Grid>
         </Grid>
     </Grid>
